// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Image - imported as '{ Img }' should render image correctly without width 1`] = `
.c0 {
  display: block;
  width: 100%;
  visibility: visible;
}

<img
  alt="Student sitting an exam"
  class="c0"
  height="576"
  sizes="100vw"
  src="https://ichef.bbci.co.uk/news/300/cpsprodpb/7098/production/_104842882_students.jpg"
  srcset="https://ichef.bbci.co.uk/news/300/cpsprodpb/7098/production/_104842882_students.jpg 300w, https://ichef.bbci.co.uk/news/450/cpsprodpb/7098/production/_104842882_students.jpg 450w, https://ichef.bbci.co.uk/news/600/cpsprodpb/7098/production/_104842882_students.jpg 600w, https://ichef.bbci.co.uk/news/1024/cpsprodpb/7098/production/_104842882_students.jpg 1024w"
/>
`;

exports[`Image - imported as '{ Img }' should render image with custom dimensions correctly 1`] = `
.c0 {
  display: block;
  width: 100%;
  visibility: visible;
}

<img
  alt="By Elisa Decker, from her series \\"Sidewalk\\""
  class="c0"
  height="547"
  sizes="100vw"
  src="https://ichef.bbci.co.uk/news/300/cpsprodpb/164BB/production/_104032319_03270dcc-9dda-4bd4-96a0-db89f6b915ae.jpg"
  width="445"
/>
`;

exports[`Image - imported as '{ Img }' should render image with srcset correctly 1`] = `
.c0 {
  display: block;
  width: 100%;
  visibility: visible;
}

<img
  alt="Student sitting an exam"
  class="c0"
  height="576"
  sizes="100vw"
  src="https://ichef.bbci.co.uk/news/300/cpsprodpb/7098/production/_104842882_students.jpg"
  srcset="https://ichef.bbci.co.uk/news/300/cpsprodpb/7098/production/_104842882_students.jpg 300w, https://ichef.bbci.co.uk/news/450/cpsprodpb/7098/production/_104842882_students.jpg 450w, https://ichef.bbci.co.uk/news/600/cpsprodpb/7098/production/_104842882_students.jpg 600w, https://ichef.bbci.co.uk/news/1024/cpsprodpb/7098/production/_104842882_students.jpg 1024w"
  width="1024"
/>
`;

exports[`Image - imported as '{ Img }' should render landscape image correctly 1`] = `
.c0 {
  display: block;
  width: 100%;
  visibility: visible;
}

<img
  alt="Student sitting an exam"
  class="c0"
  height="576"
  sizes="100vw"
  src="https://ichef.bbci.co.uk/news/300/cpsprodpb/7098/production/_104842882_students.jpg"
  width="1024"
/>
`;

exports[`Image - imported as '{ Img }' should render portrait image correctly 1`] = `
.c0 {
  display: block;
  width: 100%;
  visibility: visible;
}

<img
  alt="Map of the UK displaying Syrian refugees and asylum seekers per 10000 population. Ranges from 0 to 17."
  class="c0"
  height="1280"
  sizes="100vw"
  src="https://ichef.bbci.co.uk/news/300/cpsprodpb/439A/production/_100960371_syrians_and_asylum_v2-nc.png"
  width="1024"
/>
`;

exports[`Image - imported as '{ Img }' should render square image correctly 1`] = `
.c0 {
  display: block;
  width: 100%;
  visibility: visible;
}

<img
  alt="Tracks through the snow"
  class="c0"
  height="1024"
  sizes="100vw"
  src="https://ichef.bbci.co.uk/news/300/cpsprodpb/114FE/production/_104801907_79010.jpg"
  width="1024"
/>
`;

exports[`Image - imported as default 'Image' should render image correctly without width 1`] = `
.c0 {
  display: block;
  width: 100%;
  visibility: visible;
}

<img
  alt="Student sitting an exam"
  class="c0"
  height="576"
  sizes="100vw"
  src="https://ichef.bbci.co.uk/news/300/cpsprodpb/7098/production/_104842882_students.jpg"
  srcset="https://ichef.bbci.co.uk/news/300/cpsprodpb/7098/production/_104842882_students.jpg 300w, https://ichef.bbci.co.uk/news/450/cpsprodpb/7098/production/_104842882_students.jpg 450w, https://ichef.bbci.co.uk/news/600/cpsprodpb/7098/production/_104842882_students.jpg 600w, https://ichef.bbci.co.uk/news/1024/cpsprodpb/7098/production/_104842882_students.jpg 1024w"
/>
`;

exports[`Image - imported as default 'Image' should render image with custom dimensions correctly 1`] = `
.c0 {
  display: block;
  width: 100%;
  visibility: visible;
}

<img
  alt="By Elisa Decker, from her series \\"Sidewalk\\""
  class="c0"
  height="547"
  sizes="100vw"
  src="https://ichef.bbci.co.uk/news/300/cpsprodpb/164BB/production/_104032319_03270dcc-9dda-4bd4-96a0-db89f6b915ae.jpg"
  width="445"
/>
`;

exports[`Image - imported as default 'Image' should render image with srcset correctly 1`] = `
.c0 {
  display: block;
  width: 100%;
  visibility: visible;
}

<img
  alt="Student sitting an exam"
  class="c0"
  height="576"
  sizes="100vw"
  src="https://ichef.bbci.co.uk/news/300/cpsprodpb/7098/production/_104842882_students.jpg"
  srcset="https://ichef.bbci.co.uk/news/300/cpsprodpb/7098/production/_104842882_students.jpg 300w, https://ichef.bbci.co.uk/news/450/cpsprodpb/7098/production/_104842882_students.jpg 450w, https://ichef.bbci.co.uk/news/600/cpsprodpb/7098/production/_104842882_students.jpg 600w, https://ichef.bbci.co.uk/news/1024/cpsprodpb/7098/production/_104842882_students.jpg 1024w"
  width="1024"
/>
`;

exports[`Image - imported as default 'Image' should render landscape image correctly 1`] = `
.c0 {
  display: block;
  width: 100%;
  visibility: visible;
}

<img
  alt="Student sitting an exam"
  class="c0"
  height="576"
  sizes="100vw"
  src="https://ichef.bbci.co.uk/news/300/cpsprodpb/7098/production/_104842882_students.jpg"
  width="1024"
/>
`;

exports[`Image - imported as default 'Image' should render portrait image correctly 1`] = `
.c0 {
  display: block;
  width: 100%;
  visibility: visible;
}

<img
  alt="Map of the UK displaying Syrian refugees and asylum seekers per 10000 population. Ranges from 0 to 17."
  class="c0"
  height="1280"
  sizes="100vw"
  src="https://ichef.bbci.co.uk/news/300/cpsprodpb/439A/production/_100960371_syrians_and_asylum_v2-nc.png"
  width="1024"
/>
`;

exports[`Image - imported as default 'Image' should render square image correctly 1`] = `
.c0 {
  display: block;
  width: 100%;
  visibility: visible;
}

<img
  alt="Tracks through the snow"
  class="c0"
  height="1024"
  sizes="100vw"
  src="https://ichef.bbci.co.uk/news/300/cpsprodpb/114FE/production/_104801907_79010.jpg"
  width="1024"
/>
`;

exports[`Image - with Fade-in effect' should render image correctly without width 1`] = `
.c0 {
  display: block;
  width: 100%;
  visibility: visible;
  -webkit-animation: eMLfYp 0.2s linear;
  animation: eMLfYp 0.2s linear;
  -webkit-transition: visibility 0.2s linear;
  transition: visibility 0.2s linear;
}

<img
  alt="Student sitting an exam"
  class="c0"
  height="576"
  sizes="100vw"
  src="https://ichef.bbci.co.uk/news/300/cpsprodpb/7098/production/_104842882_students.jpg"
  srcset="https://ichef.bbci.co.uk/news/300/cpsprodpb/7098/production/_104842882_students.jpg 300w, https://ichef.bbci.co.uk/news/450/cpsprodpb/7098/production/_104842882_students.jpg 450w, https://ichef.bbci.co.uk/news/600/cpsprodpb/7098/production/_104842882_students.jpg 600w, https://ichef.bbci.co.uk/news/1024/cpsprodpb/7098/production/_104842882_students.jpg 1024w"
/>
`;

exports[`Image - with Fade-in effect' should render image with custom dimensions correctly 1`] = `
.c0 {
  display: block;
  width: 100%;
  visibility: visible;
}

<img
  alt="By Elisa Decker, from her series \\"Sidewalk\\""
  class="c0"
  height="547"
  sizes="100vw"
  src="https://ichef.bbci.co.uk/news/300/cpsprodpb/164BB/production/_104032319_03270dcc-9dda-4bd4-96a0-db89f6b915ae.jpg"
  width="445"
/>
`;

exports[`Image - with Fade-in effect' should render image with srcset correctly 1`] = `
.c0 {
  display: block;
  width: 100%;
  visibility: visible;
}

<img
  alt="Student sitting an exam"
  class="c0"
  height="576"
  sizes="100vw"
  src="https://ichef.bbci.co.uk/news/300/cpsprodpb/7098/production/_104842882_students.jpg"
  srcset="https://ichef.bbci.co.uk/news/300/cpsprodpb/7098/production/_104842882_students.jpg 300w, https://ichef.bbci.co.uk/news/450/cpsprodpb/7098/production/_104842882_students.jpg 450w, https://ichef.bbci.co.uk/news/600/cpsprodpb/7098/production/_104842882_students.jpg 600w, https://ichef.bbci.co.uk/news/1024/cpsprodpb/7098/production/_104842882_students.jpg 1024w"
  width="1024"
/>
`;

exports[`Image - with Fade-in effect' should render landscape image correctly 1`] = `
.c0 {
  display: block;
  width: 100%;
  visibility: visible;
}

<img
  alt="Student sitting an exam"
  class="c0"
  height="576"
  sizes="100vw"
  src="https://ichef.bbci.co.uk/news/300/cpsprodpb/7098/production/_104842882_students.jpg"
  width="1024"
/>
`;

exports[`Image - with Fade-in effect' should render portrait image correctly 1`] = `
.c0 {
  display: block;
  width: 100%;
  visibility: visible;
}

<img
  alt="Map of the UK displaying Syrian refugees and asylum seekers per 10000 population. Ranges from 0 to 17."
  class="c0"
  height="1280"
  sizes="100vw"
  src="https://ichef.bbci.co.uk/news/300/cpsprodpb/439A/production/_100960371_syrians_and_asylum_v2-nc.png"
  width="1024"
/>
`;

exports[`Image - with Fade-in effect' should render square image correctly 1`] = `
.c0 {
  display: block;
  width: 100%;
  visibility: visible;
}

<img
  alt="Tracks through the snow"
  class="c0"
  height="1024"
  sizes="100vw"
  src="https://ichef.bbci.co.uk/news/300/cpsprodpb/114FE/production/_104801907_79010.jpg"
  width="1024"
/>
`;

exports[`Image - with background colour should render image correctly without width 1`] = `
.c0 {
  display: block;
  width: 100%;
  visibility: visible;
  background: #ff0000;
}

<img
  alt="Student sitting an exam"
  class="c0"
  height="576"
  sizes="100vw"
  src="https://ichef.bbci.co.uk/news/300/cpsprodpb/7098/production/_104842882_students.jpg"
  srcset="https://ichef.bbci.co.uk/news/300/cpsprodpb/7098/production/_104842882_students.jpg 300w, https://ichef.bbci.co.uk/news/450/cpsprodpb/7098/production/_104842882_students.jpg 450w, https://ichef.bbci.co.uk/news/600/cpsprodpb/7098/production/_104842882_students.jpg 600w, https://ichef.bbci.co.uk/news/1024/cpsprodpb/7098/production/_104842882_students.jpg 1024w"
/>
`;

exports[`Image - with background colour should render image with custom dimensions correctly 1`] = `
.c0 {
  display: block;
  width: 100%;
  visibility: visible;
}

<img
  alt="By Elisa Decker, from her series \\"Sidewalk\\""
  class="c0"
  height="547"
  sizes="100vw"
  src="https://ichef.bbci.co.uk/news/300/cpsprodpb/164BB/production/_104032319_03270dcc-9dda-4bd4-96a0-db89f6b915ae.jpg"
  width="445"
/>
`;

exports[`Image - with background colour should render image with srcset correctly 1`] = `
.c0 {
  display: block;
  width: 100%;
  visibility: visible;
}

<img
  alt="Student sitting an exam"
  class="c0"
  height="576"
  sizes="100vw"
  src="https://ichef.bbci.co.uk/news/300/cpsprodpb/7098/production/_104842882_students.jpg"
  srcset="https://ichef.bbci.co.uk/news/300/cpsprodpb/7098/production/_104842882_students.jpg 300w, https://ichef.bbci.co.uk/news/450/cpsprodpb/7098/production/_104842882_students.jpg 450w, https://ichef.bbci.co.uk/news/600/cpsprodpb/7098/production/_104842882_students.jpg 600w, https://ichef.bbci.co.uk/news/1024/cpsprodpb/7098/production/_104842882_students.jpg 1024w"
  width="1024"
/>
`;

exports[`Image - with background colour should render landscape image correctly 1`] = `
.c0 {
  display: block;
  width: 100%;
  visibility: visible;
}

<img
  alt="Student sitting an exam"
  class="c0"
  height="576"
  sizes="100vw"
  src="https://ichef.bbci.co.uk/news/300/cpsprodpb/7098/production/_104842882_students.jpg"
  width="1024"
/>
`;

exports[`Image - with background colour should render portrait image correctly 1`] = `
.c0 {
  display: block;
  width: 100%;
  visibility: visible;
}

<img
  alt="Map of the UK displaying Syrian refugees and asylum seekers per 10000 population. Ranges from 0 to 17."
  class="c0"
  height="1280"
  sizes="100vw"
  src="https://ichef.bbci.co.uk/news/300/cpsprodpb/439A/production/_100960371_syrians_and_asylum_v2-nc.png"
  width="1024"
/>
`;

exports[`Image - with background colour should render square image correctly 1`] = `
.c0 {
  display: block;
  width: 100%;
  visibility: visible;
}

<img
  alt="Tracks through the snow"
  class="c0"
  height="1024"
  sizes="100vw"
  src="https://ichef.bbci.co.uk/news/300/cpsprodpb/114FE/production/_104801907_79010.jpg"
  width="1024"
/>
`;
